<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Pascagram</string>
    <string name="action_settings">Settings</string>
    <string name="inscription">S\'inscrire</string>
    <string name="connect">Connexion</string>
    <string name="mp">Mot de passe</string>
    <string name="mp2">Confirmation du mot de passe</string>
    <string name="viewMp">Mot de passe : </string>
    <string name="viewMp2">Confirmation du mot de passe : </string>
    <string name="pseudo">Entrez votre pseudo</string>
    <string name="viewPseudo">Pseudo : </string>
    <string name="viewInsc">Inscription</string>
    <string name="viewEmail">Adresse mail : </string>
    <string name="email">Entrez votre adresse mail</string>
    <string name="confirmation">Confirmer</string>
    <string name="effacer">Effacer</string>
    <string name="home">Accueil</string>
    <string name="actualiser">Actualiser</string>
    <string name="compte">Acceder au compte</string>
    <string name="publier">Publier une photo</string>
    <string name="deconnexion">Deconnexion</string>
    <string name="recente">Les + récentes</string>
    <string name="meilleures">Les meilleures</string>
    <string name="pires">Les pires</string>
    <string name="suivis">Les suivis</string>
    <string name="poucev">+ 1 pastèque</string>
    <string name="poucer">- 1 pastèque</string>
    <string name="commenter">Commenter</string>
    <string name="modifier">Modifier</string>
    <string name="supprimer">Supprimer</string>
    <string name="titre">Cosmo le Dodo</string>
    <string name="auteur">Publié par Cosmo lui-même</string>
    <string name="score">Trois pastèques</string>
    <string name="fgauche">Page précédente</string>
    <string name="fdroite">Page suivante</string>

    <string name="monde">Public</string>
    <string name="privé">Privé</string>
    <string name="amis">Amis</string>
    <string name="groupes">Groupes</string>
    <string name="nouvellePhoto">Nouvelle Photo</string>
    <string name="valider">Valider</string>
    <string name="annuler">Annuler</string>
    <string name="date">Publié le </string>
    <string name="commentaire">Tout plein de commentaire</string>
    <string name="nouveauCom">Ton nouveau commentaire</string>
    <string name="confirmCom">Envoyer</string>



    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="Role">Mauvais identifiants</string>


</resources>
