<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/viewInsc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/viewInsc"
        android:textStyle="bold"
        android:textSize="50sp"/>

    <TextView
        android:id="@+id/viewPseudo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/viewInsc"
        android:layout_toLeftOf="@+id/pseudo"
        android:layout_marginTop="15dp"
        android:text="@string/viewPseudo" />

    <EditText
        android:id="@+id/pseudo"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/viewInsc"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:hint="@string/pseudo"/>

    <TextView
        android:id="@+id/viewEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/pseudo"
        android:layout_toLeftOf="@+id/email"
        android:layout_marginTop="15dp"
        android:text="@string/viewEmail" />

    <EditText
        android:id="@+id/email"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/pseudo"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:hint="@string/email"/>

    <TextView
        android:id="@+id/viewMp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:layout_toLeftOf="@+id/mp"
        android:layout_marginTop="15dp"
        android:text="@string/viewMp" />

    <EditText
        android:id="@+id/mp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:inputType="textPassword"
        android:ems="10"
        android:hint="@string/mp" />

    <TextView
        android:id="@+id/viewMp2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/mp"
        android:layout_toLeftOf="@+id/mp2"
        android:layout_marginTop="15dp"
        android:text="@string/viewMp2" />

    <EditText
        android:id="@+id/mp2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/mp"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:inputType="textPassword"
        android:ems="10"
        android:hint="@string/mp2" />

    <Button
        android:id="@+id/raz"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_below="@id/mp2"
        android:layout_alignLeft="@+id/mp2"
        android:text="@string/effacer" />

    <Button
        android:id="@+id/confirm"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/raz"
        android:layout_alignRight="@+id/mp2"
        android:text="@string/confirmation"/>

</RelativeLayout>