<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:src="@drawable/cosmo" />

    <TextView
        android:id="@+id/viewPseudo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_toStartOf="@id/imageView"
        android:layout_toLeftOf="@id/imageView"
        android:textStyle="bold"
        android:text="@string/viewPseudo"/>

    <TextView
        android:id="@+id/reponse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/pseudo"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/viewPseudo"
        android:layout_toEndOf="@id/viewMp"
        android:layout_centerVertical="true"
        android:hint="@string/pseudo" />

    <TextView
        android:id="@+id/viewMp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/viewPseudo"
        android:layout_centerHorizontal="true"
        android:layout_toStartOf="@id/imageView"
        android:layout_toLeftOf="@id/imageView"
        android:layout_marginTop="30dp"
        android:text="@string/viewMp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/mp"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/viewMp"
        android:layout_below="@id/pseudo"
        android:layout_marginTop="15dp"
        android:inputType="textPassword"
        android:ems="10"
        android:hint="@string/mp"/>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/creation"
        android:text="@string/Role"
        android:textSize="10sp"/>

    <Button
        android:id="@+id/connect"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/mp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:onClick="loginPost"
        android:text="@string/connect"/>

    <Button
        android:id="@+id/creation"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/connect"
        android:layout_centerHorizontal="true"
        android:text="@string/inscription"/>

</RelativeLayout>