<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:id="@+id/auteur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/auteur"
        android:layout_marginLeft="80dp"/>

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:layout_below="@+id/auteur"
        android:layout_alignLeft="@+id/auteur"
        android:layout_alignStart="@+id/auteur"
        android:layout_marginBottom="125dp" />

    <TextView
        android:id="@+id/note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/date"
        android:text="@string/score"
        android:layout_alignLeft="@+id/date"
        android:layout_alignStart="@+id/date" />

    <ImageView
        android:id="@+id/img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ListView
        android:id="@+id/listView"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_below="@id/img"/>
</RelativeLayout>