<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@drawable/bg">

    <TextView
        android:id="@+id/newphoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Nouvelle Photo"
        android:textStyle="bold"
        android:textSize="50sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="@color/bleu"/>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/camera"
        android:layout_marginTop="133dp"
        android:layout_below="@+id/newphoto"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="175dp"
        android:layout_marginEnd="175dp"
        android:src = "@drawable/ic_action_camera" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Valider"
        android:id="@+id/save"
        android:layout_marginTop="67dp"
        android:layout_below="@+id/camera"
        android:layout_alignLeft="@+id/camera"
        android:layout_alignStart="@+id/camera"
        android:background="@drawable/custom_button_green"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Annuler"
        android:id="@+id/cancel"
        android:layout_below="@+id/save"
        android:layout_alignLeft="@+id/save"
        android:layout_alignStart="@+id/save"
        android:layout_marginTop="70dp"
        android:background="@drawable/custom_button_red"/>

    <ImageView
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:id="@+id/photo"
        android:layout_alignTop="@+id/camera"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"/>

    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/titre"
        android:layout_toLeftOf="@+id/photo"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:hint="Titre de la photo"/>

    <EditText
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:id="@+id/description"
        android:layout_below="@+id/titre"
        android:layout_toLeftOf="@+id/photo"
        android:layout_centerHorizontal="true"
        android:hint="Description de la photo"/>

    <RadioGroup
        android:id="@+id/priv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/photo"
        android:layout_centerHorizontal="true">
        <RadioButton
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/monde"
            android:checked="true" />
        <RadioButton
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/privé"/>
        <RadioButton
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/amis"/>
    </RadioGroup>

</RelativeLayout>